// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for AlgoliaInsights's productClickedEvents destination action: all fields 1`] = `
Object {
  "events": Array [
    Object {
      "anonymousID": "tTO6#",
      "eventName": "Product Clicked",
      "eventType": "click",
      "index": "tTO6#",
      "objectID": "tTO6#",
      "objectIDs": Array [
        "tTO6#",
      ],
      "position": -8127732168785920,
      "positions": Array [
        -8127732168785920,
      ],
      "queryID": "tTO6#",
      "timestamp": null,
      "userID": "tTO6#",
      "userToken": "tTO6#",
    },
  ],
}
`;

exports[`Testing snapshot for AlgoliaInsights's productClickedEvents destination action: required fields 1`] = `
Object {
  "events": Array [
    Object {
      "anonymousID": "anonId1234",
      "eventName": "Product Clicked",
      "eventType": "click",
      "index": "tTO6#",
      "objectID": "tTO6#",
      "objectIDs": Array [
        "tTO6#",
      ],
      "position": -8127732168785920,
      "positions": Array [
        -8127732168785920,
      ],
      "queryID": "tTO6#",
      "timestamp": 1671207840000,
      "userID": "user1234",
      "userToken": "user1234",
    },
  ],
}
`;
